<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="beta_app_name">Visual Voicemail BETA</string>
    <string name="shortcuts_title">Voicemail Accounts</string>
    <string name="unread_widget_label">Voicemail Unread</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="welcome_message_title">Welcome to Visual Voicemail</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from VisualVoicemail.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="import_dialog_error_message">Please install a file manager to continue with this import.</string>
    <string name="open_market">Open Play Store</string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="read_messages_label">read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="folders_title">Folders</string>
    <string name="advanced">Advanced</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g> </string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="status_loading_account_folder">Poll <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_loading_account_folder_headers">Fetching headers <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_sending_account">Sending <xliff:g id="account">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_processing_account">Proc <xliff:g id="account">%s</xliff:g>:<xliff:g id="command">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%s</xliff:g>/<xliff:g id="total">%s</xliff:g></string>
    <string name="status_next_poll">Next poll <xliff:g id="nexttime">%s</xliff:g></string>
    <string name="status_syncing_off">Syncing disabled</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="select_text_action">Select text</string>
    <string name="show_headers_action">Show headers</string>
    <string name="hide_headers_action">Hide headers</string>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="message_view_theme_action_light">Switch to light theme</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="read_receipt">Read receipt</string>
    <string name="read_receipt_enabled">Will request read receipt</string>
    <string name="read_receipt_disabled">Will not request read receipt</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="clear_local_folder_action">Clear local messages</string>
    <string name="about_action">About</string>
    <string name="prefs_title">Settings</string>
    <string name="accounts_context_menu_title">Account options</string>
    <string name="from_same_sender">More from this sender</string>
    <string name="local_storage_provider_label">Storage location</string>
    <string name="push_poll_on_connect_label">Poll when connecting for push</string>
    <string name="idle_refresh_period_label">Refresh IDLE connection</string>
    <string name="account_settings_push_advanced_title">Advanced</string>
    <string name="account_settings_notify_label">New mail notifications</string>
    <string name="account_settings_folder_notify_new_mail_mode_label">Notifications folders</string>
    <string name="account_settings_notify_sync_label">Sync notifications</string>
    <string name="account_settings_notify_summary">Notify in status bar when mail arrives</string>
    <string name="account_settings_notify_sync_summary">Notify in status bar while mail is checked</string>
    <string name="account_settings_notify_self_label">Include outgoing mail</string>
    <string name="account_settings_notify_self_summary">Show a notification for messages I sent</string>
    <string name="account_settings_notification_opens_unread_label">Notification opens unread messages</string>
    <string name="account_settings_notification_opens_unread_summary">Searches for unread messages when Notification is opened</string>
    <string name="account_settings_mark_message_as_read_on_view_label">Mark as read when opened</string>
    <string name="account_settings_mark_message_as_read_on_view_summary">Mark a message as read when it is opened for viewing</string>
    <string name="account_settings_general_title">General settings</string>
    <string name="account_settings_sync">Sync Settings</string>
    <string name="account_settings_mail_check_frequency_label">Folder poll frequency</string>
    <string name="account_settings_storage_title">Storage</string>
    <string name="account_settings_color_label">Account color</string>
    <string name="account_settings_color_summary">The accent color of this account used in folder and account list</string>
    <string name="account_settings_led_color_label">Notification LED color</string>
    <string name="account_settings_led_color_summary">The color your device LED should blink for this account</string>
    <string name="account_settings_incoming_label">Incoming server</string>
    <string name="account_settings_incoming_summary">Configure the incoming mail server</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="notifications_title">Notifications</string>
    <string name="account_settings_vibrate_enable">Vibrate</string>
    <string name="account_settings_vibrate_summary">Vibrate when mail arrives</string>
    <string name="account_settings_vibrate_pattern_label">Vibration patterns</string>
    <string name="account_settings_vibrate_times">Repeat vibration</string>
    <string name="account_settings_ringtone">New mail ringtone</string>
    <string name="account_settings_led_label">Blink LED</string>
    <string name="account_settings_led_summary">Blink LED when mail arrives</string>
    <string name="sort_by">Sort by…</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_sender">Sender</string>
    <string name="sort_by_flag">Star</string>
    <string name="sort_by_unread">Read/unread</string>
    <string name="batch_select_all">Select all</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="app_name">Visual Voicemail</string>
    <string name="app_authors">Created By:\nMichael Wallace &amp; Martin-Azizi</string>
    <string name="beta_message">Visual Voicemail is still under development, ONLY Vodafone Australia is supported</string>
    <string name="install_message">Visual Voicemail for Android connects to standard IMAP-based visual-voicemail servers (popularized by iPhone) that are deployed by many carriers across the world.\n\nThese carriers are currently supported:\n   - Vodafone Australia\n\nOn the next screen you will be asked to supply the details of your Voicemail account and talked though the setup procedure.\n\nNote: If your carrier is not listed above and provides such a service, let us know and we\'ll see if we can implement it in our application.</string>
    <string name="welcome_heading">Welcome to Visual Voicemail for Android</string>
    <string name="app_logo">Application Logo</string>
    <string name="app_desc">Visual Voicemail for Android</string>
    <string name="account_settings_auto_check_label">Auto Check Method</string>
    <string name="open_external_action">Open In External Player</string>
    <string name="add_to_contacts_action">Add to Contacts</string>
    <string name="call_action">Call</string>
    <string name="share_action">Share</string>
    <string name="save_action">Save</string>
    <string name="about_info"><![CDATA[VisualVoicemail is a fork of the fantastic K-9 email client & supports standard IMAP voicemail servers.]]></string>
</resources>