<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
        android:id="@+id/select"
        android:title="@string/select_action"/>
    <item android:id="@+id/deselect"
          android:title="@string/deselect_action"/>
    <item
        android:id="@+id/open_external_player"
        android:title="@string/open_external_action"
        />
    <item
        android:id="@+id/add_to_contacts"
        android:title="@string/add_to_contacts_action"
        />
    <item
        android:id="@+id/call"
        android:title="@string/call_action"
        />
    <item
        android:id="@+id/share"
        android:title="@string/share_action"
        />
    <item
        android:id="@+id/save"
        android:title="@string/save_action"
        />
    <item
        android:id="@+id/delete"
        android:title="@string/delete_action"
    />
    <item
        android:id="@+id/mark_as_read"
        android:title="@string/mark_as_read_action"
    />
    <item
        android:id="@+id/mark_as_unread"
        android:title="@string/mark_as_unread_action"
    />
    <item
        android:id="@+id/move"
        android:title="@string/move_action"
    />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"
    />
    <item
        android:id="@+id/flag"
        android:title="@string/flag_action"
    />
    <item
        android:id="@+id/unflag"
        android:title="@string/unflag_action"
    />
    <item
        android:id="@+id/same_sender"
        android:title="@string/from_same_sender" />
    <item
        android:id="@+id/delete_local"
        android:title="@string/delete_local_action"
        />
</menu>
