<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    The comments preceding the (top level) menu items denote which part of the combined message
    list/view activity the item belongs to. Either "MessageList", "MessageView", or "always" (as in:
    always show this item, no matter what display mode we're in).

    The comments are for informational purposes only. Please make sure to adjust the code in
    MessageList.configureMenu() if you make any changes to this file.
    -->

    <!-- MessageList -->
    <item
        android:id="@+id/search"
        android:icon="?attr/iconActionSearch"
        android:showAsAction="always"
        android:title="@string/search_action"/>

    <!-- MessageList -->
    <item
        android:id="@+id/check_mail"
        android:alphabeticShortcut="r"
        android:icon="?attr/iconActionRefresh"
        android:showAsAction="always"
        android:title="@string/check_mail_action"/>

    <!-- MessageView -->
    <item
        android:id="@+id/delete"
        android:alphabeticShortcut="q"
        android:icon="?attr/iconActionDelete"
        android:showAsAction="always"
        android:title="@string/delete_action"/>
    <!-- MessageView -->
    <item
        android:id="@+id/about"
        android:icon="?attr/iconActionAbout"
        android:title="@string/about_action"/>

    <item
        android:id="@+id/move"
        android:icon="?attr/iconActionMove"
        android:showAsAction="ifRoom"
        android:title="@string/move_action"/>
    <!-- MessageView -->
    <item
        android:id="@+id/copy"
        android:icon="?attr/iconActionCopy"
        android:showAsAction="ifRoom"
        android:title="@string/copy_action"/>

    <!-- MessageView -->
    <item
        android:id="@+id/single_message_options"
        android:icon="?attr/iconActionSingleMessageOptions"
        android:showAsAction="ifRoom"
        android:title="@string/single_message_options_action">
        <menu>
            <item
                android:id="@+id/share"
                android:title="@string/send_alternate_action"/>
        </menu>
    </item>

    <!-- MessageList -->
    <item
        android:id="@+id/set_sort"
        android:icon="?attr/iconActionSort"
        android:showAsAction="ifRoom"
        android:title="@string/sort_by">
        <menu>
            <item
                android:id="@+id/set_sort_date"
                android:title="@string/sort_by_date"/>
            <item
                android:id="@+id/set_sort_sender"
                android:title="@string/sort_by_sender"/>
            <item
                android:id="@+id/set_sort_flag"
                android:title="@string/sort_by_flag"/>
            <item
                android:id="@+id/set_sort_unread"
                android:title="@string/sort_by_unread"/>
        </menu>
    </item>

    <!-- MessageList -->
    <item
        android:id="@+id/select_all"
        android:icon="?attr/iconActionSelectAll"
        android:showAsAction="never"
        android:title="@string/batch_select_all"/>

    <!-- MessageList -->
    <item
        android:id="@+id/mark_all_as_read"
        android:showAsAction="never"
        android:title="@string/mark_all_as_read"/>

    <item
        android:id="@+id/show_folder_list"
        android:showAsAction="never"
        android:title="@string/folders_title" />

    <item
        android:id="@+id/show_greetings"
        android:showAsAction="never"
        android:title="@string/greetings" />

    <item
        android:id="@+id/create_greeting"
        android:showAsAction="never"
        android:title="@string/new_greeting" />
    <!-- always -->
    <item
        android:id="@+id/settings"
        android:icon="?attr/iconActionSettings"
        android:showAsAction="never"
        android:title="@string/preferences_action">
        <menu>
            <item
                android:id="@+id/account_settings"
                android:title="@string/account_settings_action"/>
            <item
                android:id="@+id/app_settings"
                android:title="@string/global_settings_action"/>
        </menu>
    </item>

</menu>
