<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dip"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dip"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/app_desc"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:textSize="14sp"
        android:gravity="center"
        android:id="@+id/about_version"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/about_info" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/app_authors" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:textSize="14sp"
        android:gravity="center"
        android:id="@+id/about_link"
        android:textStyle="bold"
        android:linksClickable="true" />
</LinearLayout>